KubeManifests/app_deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: dotnet6webapi
  name: dotnet6webapi
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotnet6webapi
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: dotnet6webapi
    spec:
      containers:
      - image: sanjayjanarthanan/dotnetwebapi
        name: webapi
        resources: {}
        ports:
        - containerPort: 7000
status: {}
