KubeManifests/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: dotnet6webapi
  name: dotnet6webapiservice
  namespace: dev
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 7000
  selector:
    app: dotnet6webapi
status:
  loadBalancer: {}
