KubeManifests/istiomanifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: dotnet6webapi
  name: dotnet6webapi
  namespace: istio-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotnet6webapi
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: dotnet6webapi
    spec:
      containers:
      - image: sanjayjanarthanan/dotnetwebapi
        name: webapi
        resources: {}
        ports:
        - containerPort: 7000
status: {}

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: dotnet6webapi
  name: dotnet6webapiservice
  namespace: istio-test
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 7000
  selector:
    app: dotnet6webapi
status:
  loadBalancer: {}

---
