KubeManifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: "sanjayjanarthanan.click"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: hello-service
              port:
                number: 80
        - pathType: Prefix
          path: "/users"
          backend:
            service:
              name: dotnet6webapiservice
              port:
                number: 80
